# vumit-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
vumit/: __init__.py  ai_service.py  cli.py  git_analyzer.py
